Update pacparser to pure rust version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ hyper = { version = "0.14.20", features = ["client", "server", "http1", "tcp", "
 pacparser = { git = "http://github.com/traxys/pacparser-rs", version = "0.1.0" }
 tokio = { version = "1.21.0", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
 tokio-util = { version = "0.7.3", features = ["rt"] }
+url = "2.3.1"
